@@ -89,7 +89,8 @@ sub new {
 }
 
 sub quote {
-    foreach (@_) {
+    my @res = @_ ;
+    foreach (@res) {
 	if (    defined $_ 
 		and ( /(\s|")/ or $_ eq '')
 	   ) {
@@ -97,6 +98,7 @@ sub quote {
 	    $_ = '"' . $_ . '"' ; # add my quotes
 	}
     }
+    return wantarray ? @res : $res[0];
 }
 
 =head1 Methods
@@ -180,20 +182,12 @@ sub dump_tree {
         return '  ' x $depth;
     };
 
-    my $add_note = sub {
-	my ($obj,$data_r) = @_ ;
-	my $note = $obj->annotation ;
-	quote($note) ;
-	$$data_r .= '#'.$note if defined $data_r and $note ;
-	return $note ;
-    } ;
-
-    my $std_cb = sub {
+   my $std_cb = sub {
         my ( $scanner, $data_r, $node, $element, $index, $value_obj ) = @_;
 
 	# get value or only customized value
-	my $value = $value_obj->fetch ($fetch_mode) ;
-	quote($index,$value) ;
+	my $value = quote($value_obj->fetch ($fetch_mode)) ;
+	$index = quote($index) ;
 
         my $pad = $compute_pad->($node);
 
@@ -201,8 +195,10 @@ sub dump_tree {
                  :                   $element;
 
 	# add annotation for obj contained in hash or list
-        $$data_r .= "\n" . $pad . $name . '=' . $value if defined $value;
-	$add_note->($value_obj,$data_r) ;
+	my $note = quote($value_obj->annotation) ;
+        $$data_r .= "\n" . $pad . $name if defined $value or $note ;
+	$$data_r .= '='  . $value       if defined $value          ;
+	$$data_r .= '#'  . $note        if                   $note ;
     };
 
     my $check_list_cb = sub {
@@ -210,15 +206,18 @@ sub dump_tree {
 
 	# get value or only customized value
 	my $value = $value_obj->fetch ($fetch_mode) ;
-	my $qvalue = $value ;
-	quote($index,$qvalue) ;
+	my $qvalue = quote($value) ;
+	$index = quote($index) ;
         my $pad = $compute_pad->($node);
 
         my $name = defined $index ? "$element:$index" 
                  :                   $element;
 
-        $$data_r .= "\n" . $pad . $name . '=' . $qvalue if $value;
-	$add_note->($value_obj,$data_r) ;
+	# add annotation for obj contained in hash or list
+	my $note = quote($value_obj->annotation) ;
+        $$data_r .= "\n" . $pad . $name if $value or $note ;
+	$$data_r .= '='  . $qvalue      if $value          ;
+	$$data_r .= '#'  . $note        if           $note ;
     };
 
     my $list_element_cb = sub {
@@ -228,7 +227,7 @@ sub dump_tree {
 	my $list_obj = $node->fetch_element($element) ;
 
 	# add annotation for list element
-	my $note  = $add_note->($list_obj) ;
+	my $note  = quote($list_obj->annotation) ;
 	$$data_r .= "\n$pad$element#$note" if $note ;
 
         if ( $list_obj->cargo_type eq 'node' ) {
@@ -238,10 +237,12 @@ sub dump_tree {
         }
         else {
 	    # skip undef values
-	    my @val = grep (defined $_,$list_obj->fetch_all_values($fetch_mode)) ;
-	    quote(@val) ;
-            $$data_r .= "\n$pad$element=" . join( ',', @val ) if @val;
-	    $add_note->($list_obj,$data_r) ;
+	    my @val = quote( grep (defined $_, 
+				   $list_obj->fetch_all_values($fetch_mode))) ;
+	    my $note = quote($list_obj->annotation) ;
+            $$data_r .= "\n$pad$element"        if @val or $note ;
+	    $$data_r .= "=" . join( ',', @val ) if @val;
+	    $$data_r .= '#'  . $note            if         $note ;
         }
     };
 
@@ -252,7 +253,7 @@ sub dump_tree {
 	my $hash_obj = $node->fetch_element($element) ;
 
 	# add annotation for list or hash element
-	my $note  = $add_note->($hash_obj) ;
+	my $note  = quote($hash_obj->annotation) ;
 	$$data_r .= "\n$pad$element#$note" if $note ;
 
 	# resume exploration
@@ -270,12 +271,18 @@ sub dump_tree {
         return if $skip_aw and $next->is_auto_write_for_type($skip_aw) ;
 
         my $pad = $compute_pad->($node);
+	my $node_note = $node->annotation ;
 
 	my $head = "\n$pad$element";
 	if ($type eq 'list' or $type eq 'hash') {
- 	    quote($key) ;
-	    $head .= ":$key" ;
-	    $add_note->($node->fetch_element($element),\$head);
+	    $head.="#$node_note$head" if $node_note ;
+	    $head .= ':'.quote($key) ;
+	    # add list of hash annotation
+	    my $note = $node->fetch_element($element)->annotation ;
+	    $head.="#$note" if $note;
+	}
+	elsif ($node_note) {
+	    $head.="#$node_note";
 	}
 
 	my $sub_data = '';
@@ -304,7 +311,9 @@ sub dump_tree {
     # perform the scan
     my $view_scanner = Config::Model::ObjTreeScanner->new(@scan_args);
 
-    my $ret = '' ;
+    my $ret = '';
+    my $note = quote($node->annotation) ;
+    $ret .="\n#$note" if $note ;
     $view_scanner->scan_node(\$ret, $node);
 
     substr( $ret, 0, 1, '' );    # remove leading \n
